[gd_scene load_steps=3 format=3 uid="uid://ce3ger0p3526j"]

[ext_resource type="Script" uid="uid://c7ol5owmqcbos" path="res://addons/game_manager/attack/game_attack_editor.gd" id="1_bf0fn"]
[ext_resource type="PackedScene" uid="uid://63arjodw3br1" path="res://components/back_button.tscn" id="2_j76lm"]

[node name="GameAttackEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bf0fn")

[node name="BackButton" parent="." instance=ExtResource("2_j76lm")]
layout_mode = 0
offset_left = 36.0
offset_top = 36.0
offset_right = 106.0
offset_bottom = 67.0

[node name="AttackForm" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -502.0
offset_top = -170.5
offset_right = 502.0
offset_bottom = 170.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="DetailsForm" type="VBoxContainer" parent="AttackForm"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="NameLabel" type="Label" parent="AttackForm/DetailsForm"]
layout_mode = 2
text = "Name:"

[node name="Label" type="Label" parent="AttackForm/DetailsForm"]
layout_mode = 2
theme_override_colors/font_color = Color(0.791999, 0.791999, 0.791999, 1)
theme_override_font_sizes/font_size = 12
text = "Enter name of attack to load the data."

[node name="NameInput" type="LineEdit" parent="AttackForm/DetailsForm"]
layout_mode = 2
placeholder_text = "Enter a name..."

[node name="DescriptionLabel" type="Label" parent="AttackForm/DetailsForm"]
layout_mode = 2
text = "Description:"

[node name="DescriptionInput" type="TextEdit" parent="AttackForm/DetailsForm"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
placeholder_text = "Enter a description..."

[node name="TypeLabel" type="Label" parent="AttackForm/DetailsForm"]
layout_mode = 2
text = "Type:"

[node name="TypeInput" type="LineEdit" parent="AttackForm/DetailsForm"]
layout_mode = 2
placeholder_text = "Enter a type..."

[node name="TagsLabel" type="Label" parent="AttackForm/DetailsForm"]
layout_mode = 2
text = "Tags:"

[node name="TagsInput" type="LineEdit" parent="AttackForm/DetailsForm"]
layout_mode = 2
placeholder_text = "Enter a tag..."

[node name="StatsForm" type="VBoxContainer" parent="AttackForm"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="PowerLabel" type="Label" parent="AttackForm/StatsForm"]
layout_mode = 2
text = "Power"

[node name="PowerInput" type="SpinBox" parent="AttackForm/StatsForm"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="AttackForm/StatsForm"]
layout_mode = 2
text = "Speed:"

[node name="SpeedInput" type="SpinBox" parent="AttackForm/StatsForm"]
layout_mode = 2

[node name="CooldownLabel" type="Label" parent="AttackForm/StatsForm"]
layout_mode = 2
text = "Cooldown:"

[node name="CooldownInput" type="SpinBox" parent="AttackForm/StatsForm"]
layout_mode = 2
step = 0.1

[node name="RangeLabel" type="Label" parent="AttackForm/StatsForm"]
layout_mode = 2
text = "Range:"

[node name="RangeInput" type="SpinBox" parent="AttackForm/StatsForm"]
layout_mode = 2
step = 0.1

[node name="KnockbackLabel" type="Label" parent="AttackForm/StatsForm"]
layout_mode = 2
text = "Knockback:"

[node name="KnockbackInput" type="SpinBox" parent="AttackForm/StatsForm"]
layout_mode = 2
step = 0.1

[node name="ButtonGroup" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -148.0
offset_right = 47.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="ButtonGroup"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="ButtonGroup/Buttons"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="ButtonGroup/Buttons"]
layout_mode = 2
text = "Load"
